2007-02-11  Krzysztof Burghardt

	* src/clamfs.cxx: clamfs_fixpath() renamed to fixpath()
	* src/clamfs.cxx: clamfs_open_backend() renamed to open_backend()
	* configure.ac: bumped to 0.7.0

2007-02-09  Krzysztof Burghardt

	* configure.ac: bumped to 0.5.0