@@ -1,3 +1,9 @@
+2007-02-12  Krzysztof Burghardt
+
+	* src/clamfs.cxx: main(): add sanity check of configuration
+	* src/clamfs.cxx: clamfs_open(): add exclude from anti-virus scan
+	based on file size
+
 2007-02-11  Krzysztof Burghardt
 
 	* src/clamfs.cxx: clamfs_fixpath() renamed to fixpath()
